overflow fixed in jobs and talants

--- a/src/pages/talants/talants.scss
+++ b/src/pages/talants/talants.scss
@@ -4,11 +4,9 @@
     justify-content: space-between;
     width: 100%;
     max-width: 376px;
-    margin-bottom: 30px;
-    padding-top: 30px;
-    // padding-bottom: 8px;
-    // border-bottom: 5px solid #fff;
-    // border-radius: 5px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+ 
   }
 
   &__control_item {
